LLM_on_Kubernetes/Inference_Platfrom/08-LLM-Router/vLLM-Router/vllm-router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-router
  namespace: llm-inference
spec:
  ingressClassName: nginx
  rules:
  - host: vllm.magedu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vllm-router
            port:
              number: 8000
